<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pipimy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="version">版本號: </string>

    <string name="title_bar_browser">拍拍賣</string>
    <string name="title_bar_product_detail">商品上架</string>
    <string name="title_bar_edit_profile">編輯檔案</string>
    <string name="title_bar_inbox">收件匣</string>
    <string name="title_bar_contact">通訊錄設定</string>
    <string name="title_bar_contact_add">新增通訊錄</string>
    <string name="title_bar_contact_edit">編輯通訊錄</string>
    <string name="title_bar_bill">結帳</string>
    <string name="title_bar_btn_commit">完成</string>
    <string name="title_bar_btn_cancel">取消</string>

    <string name="bottom_menu1">瀏覽</string>
    <string name="bottom_menu2">購物車</string>
    <string name="bottom_menu3">賣東西</string>
    <string name="bottom_menu4">活動</string>
    <string name="bottom_menu5">我</string>

    <string name="button_pm">私訊購買</string>
    <string name="sell_cover_pic">封面照片</string>
    <string name="sell_tetail_title">細節</string>
    <string name="sell_tetail_item1">分類</string>
    <string name="sell_tetail_item2">商品</string>
    <string name="sell_tetail_item3">收款方式</string>
    <string name="sell_tetail_item4">寄送方式</string>
    <string name="sell_tetail_item5">價格</string>
    <string name="sell_tetail_item6">鑑賞期</string>
    <string name="sell_share_title">分享</string>
    <string name="sell_share_item1">Facebook Wall</string>
    <string name="sell_share_item2">Facebook Page</string>
    <string name="sell_tetail_item1_hint">選擇一個</string>
    <string name="sell_tetail_item2_hint">你在賣什麼</string>
    <string name="sell_tetail_item3_hint">設定金流</string>
    <string name="sell_tetail_item4_hint">設定物流</string>
    <string name="sell_tetail_item5_hint">設定價格</string>
    <string name="sell_tetail_item6_hint">請選擇是否有鑑賞期</string>
    <string name="sell_share_item1_hint">設定</string>
    <string name="sell_share_item2_hint">沒有</string>
    <string name="sell_product_name_hint">你在賣的物品名稱</string>
    <string name="sell_product_description_hint">(選填)\n提供更多關於待售物品的訊息吧！\n例如大小、使用狀況、顏色等等。</string>
    <string name="sell_product_price_hint">請輸入商品售價</string>
    <string name="home_line1">PiPiMy使用歐付寶第三方支付履約保障服務，</string>
    <string name="home_line2">請使用歐付寶帳號登入或註冊</string>
    <string name="home_login">使用歐付寶會員登入</string>
    <string name="home_register">註冊成為歐付寶會員</string>
    <string name="home_visitor">\t\t\t 訪客瀏覽 \t\t\t</string>
    <string name="search_recent">最近的搜尋</string>
    <string name="search_input_hint">請輸入搜尋關鍵字</string>
    <string name="talk_title">聊天對象名稱</string>
    <string name="talk_hint">請輸入你要說的話</string>
    <string name="talk_bid">出價</string>
    <string name="talk_exit">退出</string>
    <string name="talk_accept_bid">接受出價</string>
    <string name="talk_reject_bid">拒絕出價</string>
    <string name="talk_go_pay">前往付款</string>
    <string name="notice_go_pay">賣家已接受您的出價 \n請前往付款</string>
    <string name="pm_list_title">聊天/出價</string>
    <string name="bid_summit">確認送出</string>

    <string name="edit_profile_nickname">使用者暱稱</string>
    <string name="edit_profile_city">我的城市</string>
    <string name="edit_profile_website">網站</string>
    <string name="edit_profile_intro">個人簡介</string>
    <string name="edit_profile_photo">照片</string>
    <string name="edit_profile_private_info">個人資料(不公開)</string>
    <string name="edit_profile_name">真實姓名</string>
    <string name="edit_profile_phone">手機</string>
    <string name="edit_profile_sex">性別</string>
    <string name="edit_profile_birthday">生日</string>
    <string name="edit_profile_email">E-mail</string>
    <string name="edit_profile_add">地址</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="address_hint_1">請選擇縣市</string>
    <string name="address_hint_2">請選擇鄉鎮市區</string>
    <string name="address_hint_3">請填寫街路門牌號樓層</string>

    <string name="contact_add">新增</string>
    <string name="contact_name">姓名:</string>
    <string name="contact_mobile">手機:</string>
    <string name="contact_address">地址:</string>
    <string name="contact_del">刪除此筆通訊資訊</string>

    <string name="gcm_send">Send</string>
    <string name="gcm_clear">Clear</string>

</resources>
