<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_home"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5" >

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_home" />

        <TextView
            android:id="@+id/text_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5" >

        <TextView
            android:id="@+id/announcement1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/home_line1" />

        <TextView
            android:id="@+id/announcement2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/announcement1"
            android:layout_centerHorizontal="true"
            android:text="@string/home_line2" />

        <RelativeLayout
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/announcement2" >

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:background="@drawable/btn_pm"
                android:padding="5dp"
                android:text="@string/home_login"
                android:textColor="@color/text_btn_pm" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@id/btn_login"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:background="@drawable/btn_pm"
                android:padding="5dp"
                android:text="@string/home_register"
                android:textColor="@color/text_btn_pm" />

            <Button
                android:id="@+id/btn_visitor"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@id/btn_register"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:background="@drawable/btn_pm"
                android:padding="5dp"
                android:text="@string/home_visitor"
                android:textColor="@color/text_btn_pm" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>