<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:background="@color/bg_title_bar">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:paddingLeft="10dp"
            android:src="@drawable/ic_action_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/general_text_white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@color/bg_talk_list">

        <RelativeLayout
            android:id="@+id/product_info_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_talk_product_area">

            <ImageView
                android:id="@+id/img_product"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/img_talk_product" />

            <LinearLayout
                android:id="@+id/layout_content_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/img_product"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="PANTONE書卡" />

                <TextView
                    android:id="@+id/text_product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NT$200"
                    android:textColor="@color/text_red" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/talk_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_info_bar">

            <LinearLayout
                android:id="@+id/layout_product_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/layout_wait_for_seller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/text_bid_waitting_for_seller"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="5dp"
                        android:text="等待賣方確認出價"
                        android:textSize="@dimen/talk_text_wait_for_seller_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="5dp"
                        android:layout_below="@+id/text_bid_waitting_for_seller"
                        android:background="@color/general_text_gray" />
                </RelativeLayout>


                <Button
                    android:id="@+id/btn_bid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btn_pm"
                    android:text="@string/talk_bid"
                    android:textColor="@color/text_btn_pm"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_exit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btn_pm"
                    android:text="@string/talk_exit"
                    android:textColor="@color/text_btn_pm"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_accept_bid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btn_pm"
                    android:text="@string/talk_accept_bid"
                    android:textColor="@color/text_btn_pm"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_reject_bid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btn_pm"
                    android:text="@string/talk_reject_bid"
                    android:textColor="@color/text_btn_pm"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_go_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btn_pm"
                    android:text="@string/talk_go_pay"
                    android:textColor="@color/text_btn_pm"
                    android:layout_weight="1"
                    android:visibility="gone" />
            </LinearLayout>

            <ListView
                android:id="@+id/list_talk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/layout_product_status"
                android:layout_above="@+id/layout_accept_bid"
                android:cacheColorHint="@android:color/transparent"
                android:listSelector="@android:color/transparent" />

            <RelativeLayout
                android:id="@+id/layout_accept_bid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:visibility="gone">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@color/general_bg_red"
                    android:gravity="center"
                    android:text="@string/notice_go_pay"
                    android:textColor="@color/general_text_white"
                    android:layout_margin="5dp" />

            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/layout_bottom_take_picture"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true">

            <ImageView
                android:id="@+id/img_bottom_take_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/btn_take_picture" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_bottom_input_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/layout_bottom_menu_send"
            android:layout_toRightOf="@+id/layout_bottom_take_picture">

            <EditText
                android:id="@+id/edittext_talk_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/bg_text_input"
                android:hint="@string/talk_hint"
                android:imeOptions="actionSend"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_bottom_menu_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">

            <ImageView
                android:id="@+id/img_bottom_menu_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/btn_send" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>