<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_contact_item"
        android:layout_margin="5dp">


        <RelativeLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/text_title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_name"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/text_contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/text_title_name"
                android:paddingLeft="10dp" />


        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />


        <RelativeLayout
            android:id="@+id/layout_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/text_title_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_mobile"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/text_contact_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/text_title_mobile"
                android:paddingLeft="10dp" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray" />

        <RelativeLayout
            android:id="@+id/layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/text_title_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_address"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/text_contact_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/text_title_address"
                android:paddingLeft="10dp" />

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/img_contact_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_contact_item_edit"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp" />

</RelativeLayout>
